# cakebot-api

./: .gitignore  Cargo.toml
migrations/2018-12-18-072743_create_reminders_table/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  reminder.rs  schema.rs  tests.rs
